test/fail/page-as-template.app
//Cannot use page as template

application test

  entity Entity0 {
    property :: String
  }

  define page root() {
    var e := Entity0{}
    root()
  }
